--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
   <li><a href="pymeta.html">Python metaprogramming</a></li>
   <li><a href="scipy.html">Python for data analysis</a></li>
   <li><a href="bigdata.html">Frameworks for Big Data</a></li>
+  <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
 </ul>
 
         </section>
