--- a/index.html
+++ b/index.html
@@ -92,31 +92,20 @@
 <h2 id="esercizi-di-programmazione">Esercizi di programmazione</h2>
 
 <ul>
-  <li><a href="esercizi-2022.html">Esercitazioni in lab 2022</a></li>
-  <li><a href="esercizi-2021.html">Esercitazioni in lab 2021</a></li>
-  <li><a href="esercizi-2020.html">Esercitazioni in lab 2020</a></li>
-  <li><a href="esercizi-2019.html">Esercitazioni in lab 2019</a></li>
-  <li><a href="esercizi-2018.html">Esercitazioni in lab 2018</a></li>
-  <li><a href="esercizi-2017.html">Esercitazioni in lab 2017</a></li>
-  <li><a href="esercizi-2016.html">Esercitazioni in lab 2016</a></li>
-  <li><a href="esercizi-2015.html">Esercitazioni in lab 2015</a></li>
-  <li><a href="esercizi-2014.html">Esercitazioni in lab 2014</a></li>
-  <li><a href="esercizi-2013.html">Esercitazioni in lab 2013</a></li>
-  <li><a href="esercizi-2012.html">Esercitazioni in lab 2012</a></li>
-  <li><a href="esercizi-2011.html">Esercitazioni in lab 2011</a></li>
-  <li><a href="https://www.dropbox.com/s/ay7nhfs7d41cd34/esercizi-2010.pdf?dl=1">Esercitazioni in lab 2010</a></li>
   <li><a href="https://github.com/tomamic/fondinfo">Esercizi risolti ed esempi</a></li>
-  <li><a href="http://www.cedi.unipr.it/gestioneaccounts">Accesso ai lab</a></li>
-</ul>
-
-<hr />
-
-<h2 id="libri-software-e-link">Libri, software e link</h2>
-
-<ul>
-  <li><a href="intro.html#9">Libri di testo</a></li>
-  <li><a href="intro.html#11">Strumenti software</a></li>
-  <li><a href="https://github.com/tomamic/fondinfo/wiki/Link-utili">Link utili</a></li>
+  <li><a href="esercizi-2022.html">Esercizi in lab 2022</a></li>
+  <li><a href="esercizi-2021.html">Esercizi in lab 2021</a></li>
+  <li><a href="esercizi-2020.html">Esercizi in lab 2020</a></li>
+  <li><a href="esercizi-2019.html">Esercizi 2019</a>,
+  <a href="esercizi-2018.html">2018</a>,
+  <a href="esercizi-2017.html">2017</a>,
+  <a href="esercizi-2016.html">2016</a>,
+  <a href="esercizi-2015.html">2015</a>,
+  <a href="esercizi-2014.html">2014</a>,
+  <a href="esercizi-2013.html">2013</a>,
+  <a href="esercizi-2012.html">2012</a>,
+  <a href="esercizi-2011.html">2011</a>,
+  <a href="https://www.dropbox.com/s/ay7nhfs7d41cd34/esercizi-2010.pdf?dl=1"> 2010</a></li>
 </ul>
 
 <hr />
@@ -124,19 +113,24 @@
 <h2 id="approfondimenti">Approfondimenti</h2>
 
 <ul>
-  <li><a href="cpp0.html">Modern C++ e g2d</a></li>
+  <li><a href="cpp0.html">Modern C++ e g2d</a> —
+  <a href="x08-cpp-sequenze.html">Sequenze dati</a> —
+  <a href="x09-cpp-qt.html">Gui con Qt</a></li>
+  <li>C++: <a href="cpp1.html">Basics</a> —
+  <a href="cpp2.html">Classes</a> —
+  <a href="cpp3.html">Templates</a> —
+  <a href="cpp4.html">Internals</a></li>
   <li><a href="go-linuxday.html">Go e g2d (Linux Day 2019)</a></li>
   <li><a href="x01-oop.html">Sistemi ad oggetti</a></li>
   <li><a href="x02-sisop.html">Sistemi operativi</a></li>
-  <li><a href="x03-reti.html">Reti di calcolatori</a></li>
+  <li><a href="x03-reti.html">Reti di calcolatori</a> —
+  <a href="https://www.dropbox.com/s/w6u3s56zxp83q96/x9-webapp.pdf?dl=0">Applicazioni web</a> —
+  <a href="https://www.dropbox.com/s/dz0r1d477uwubv2/ratings.zip?dl=1">Esempio ratings</a></li>
   <li><a href="x04-html.html">HTML e CSS</a></li>
   <li><a href="x05-database.html">Basi di dati</a></li>
-  <li><a href="x06-tkinter.html">Gui con Tkinter</a></li>
-  <li><a href="x07-android.html">Python su Android</a></li>
-  <li><a href="x08-cpp-sequenze.html">C++: Sequenze dati</a></li>
-  <li><a href="x09-cpp-qt.html">C++: Gui con Qt</a></li>
-  <li><a href="https://www.dropbox.com/s/w6u3s56zxp83q96/x9-webapp.pdf?dl=0">Applicazioni web</a></li>
-  <li><a href="https://www.dropbox.com/s/dz0r1d477uwubv2/ratings.zip?dl=1">Esempio ratings</a></li>
+  <li><a href="x06-tkinter.html">Python: Gui con Tkinter</a> —
+  <a href="x07-android.html">Kivy e Android</a></li>
+  <li><a href="https://github.com/tomamic/fondinfo/wiki/Link-utili">Link utili</a></li>
 </ul>
 
 <hr />
@@ -154,14 +148,15 @@
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
   <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EbuKeDtgOzZAiGsPjZC35V4BlJOlfyDgOcg6ESNQS7VFAA?e=Icmh9W">Laurea in Ingegneria delle Tecnologie Informatiche</a></li>
-  <li>Python: <a href="p1-algoritmi.html">Lez.1</a>,
-<a href="p2-oggetti.html">Lez.2</a>,
-<a href="p3-composizione.html">Lez.3</a>,
-<a href="https://tomamic.github.io/pyodide/">Playground</a></li>
-  <li>Go: <a href="go1-algoritmi.html">Lez.1</a>,
-<a href="go2-oggetti.html">Lez.2</a>,
-<a href="go3-composizione.html">Lez.3</a>,
-<a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li>
+  <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
+  <a href="p03-funzioni.html">Lez.2</a> —
+  <a href="p04-oggetti.html">Lez.3</a> —
+  <a href="p05-relazioni.html">Lez.4</a> —
+  <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
+  <li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
+  <a href="go2-oggetti.html">Lez.2</a> —
+  <a href="go3-composizione.html">Lez.3</a> —
+  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li>
 <li><a href="images/sprites/invaders.png">invaders.png</a></li>
 
   <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
@@ -176,19 +171,15 @@
 
 <ul>
   <li><a href="paradigms.html">Introduction</a></li>
-  <li><a href="hs1.html">Haskell: lists &amp; funs</a></li>
-  <li><a href="hs2.html">Haskell: more funs</a></li>
-  <li><a href="hs3.html">Haskell: types and I/O</a></li>
-  <li><a href="cpp1.html">C++: basis</a></li>
-  <li><a href="cpp2.html">C++: classes</a></li>
-  <li><a href="cpp3.html">C++: templates</a></li>
-  <li><a href="cpp4.html">C++: internals</a></li>
-  <li><a href="golang.html">Go: basics</a></li>
+  <li><a href="hs1.html">Haskell: Lists &amp; funs</a> —
+  <a href="hs2.html">More funs</a> —
+  <a href="hs3.html">Types and I/O</a></li>
   <li><a href="rust.html">Rust</a></li>
-  <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">More</a></li>
+  <li><a href="golang.html">Go</a></li>
   <li><a href="pymeta.html">Python metaprogramming</a></li>
   <li><a href="scipy.html">Python for data analysis</a></li>
   <li><a href="bigdata.html">Frameworks for Big Data</a></li>
+  <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
   <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
 </ul>
 
