--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <li><a href="https://www.dropbox.com/s/f2n8ukok23k268r/stage-iscrizione.docx?dl=1">Modulo richiesta di iscrizione</a></li>
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
   <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
-  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EbuKeDtgOzZAiGsPjZC35V4BlJOlfyDgOcg6ESNQS7VFAA?e=Icmh9W">Laurea in Ingegneria delle Tecnologie Informatiche</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a></li>
   <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
   <a href="p03-funzioni.html">Lez.2</a> —
   <a href="p04-oggetti.html">Lez.3</a> —
