--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <h2 id="stage-estivo">Stage estivo</h2>
 
-<p><strong>Creare un videogioco in Python o Go</strong></p>
+<p><strong>Creare un videogioco in Python</strong></p>
 
 <p>Stage formativo per studenti delle scuole superiori, 12-16 giugno 2023</p>
 
@@ -80,7 +80,7 @@
 <ul>
   <li><a href="https://github.com/tomamic/fondinfo/wiki/"><b>Dispense del corso</b></a></li>
   <li><a href="intro.html">Presentazione del corso</a></li>
-  <li><a href="intro.html#/4">Esercitazioni ed esame</a></li>
+  <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
   <li><a href="intro.html#/8">Libri e software</a> - <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
   <li><a href="https://elly2022.dia.unipr.it/mod/forum/view.php?id=3772">Annunci</a></li>
 </ul>
