--- a/index.html
+++ b/index.html
@@ -45,37 +45,6 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<h2 id="stage-estivo">Stage estivo</h2>
-
-<p><strong>Creare un videogioco in Python</strong></p>
-
-<p>Stage formativo per studenti delle scuole superiori, 12-16 giugno 2023</p>
-
-<ul>
-  <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
-  <li><a href="stage.html">Presentazione dello stage</a></li>
-  <li><a href="https://www.dropbox.com/s/f2n8ukok23k268r/stage-iscrizione.docx?dl=1">Modulo richiesta di iscrizione</a></li>
-  <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
-  <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
-  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
-  <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
-  <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
-  <a href="p03-funzioni.html">Lez.2</a> —
-  <a href="p04-oggetti.html">Lez.3</a> —
-  <a href="p05-relazioni.html">Lez.4</a> —
-  <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
-  <li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
-  <a href="go2-oggetti.html">Lez.2</a> —
-  <a href="go3-composizione.html">Lez.3</a> —
-  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li>
-<li><a href="images/sprites/invaders.png">invaders.png</a></li>
-
-  <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
-  <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
-</ul>
-
-<hr />
-
 <h2 id="insegnamento-per-ingegneria-delle-tecnologie-informatiche">Insegnamento per Ingegneria delle Tecnologie Informatiche</h2>
 
 <ul>
@@ -124,10 +93,11 @@
 
 <ul>
   <li><a href="https://github.com/tomamic/fondinfo">Esercizi risolti ed esempi</a></li>
+  <li><a href="esercizi-2022.html">Esercizi in lab 2023</a></li>
   <li><a href="esercizi-2022.html">Esercizi in lab 2022</a></li>
   <li><a href="esercizi-2021.html">Esercizi in lab 2021</a></li>
-  <li><a href="esercizi-2020.html">Esercizi in lab 2020</a></li>
-  <li><a href="esercizi-2019.html">Esercizi 2019</a>,
+  <li><a href="esercizi-2020.html">Esercizi 2020</a>,
+  <a href="esercizi-2019.html">2019</a>,
   <a href="esercizi-2018.html">2018</a>,
   <a href="esercizi-2017.html">2017</a>,
   <a href="esercizi-2016.html">2016</a>,
@@ -182,6 +152,37 @@
   <li><a href="bigdata.html">Frameworks for Big Data</a></li>
   <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
   <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
+</ul>
+
+<hr />
+
+<h2 id="stage-estivo">Stage estivo</h2>
+
+<p><strong>Creare un videogioco in Python</strong></p>
+
+<p>Stage formativo per studenti delle scuole superiori, 12-16 giugno 2023</p>
+
+<ul>
+  <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
+  <li><a href="stage.html">Presentazione dello stage</a></li>
+  <li><a href="https://www.dropbox.com/s/f2n8ukok23k268r/stage-iscrizione.docx?dl=1">Modulo richiesta di iscrizione</a></li>
+  <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
+  <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
+  <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
+  <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
+  <a href="p03-funzioni.html">Lez.2</a> —
+  <a href="p04-oggetti.html">Lez.3</a> —
+  <a href="p05-relazioni.html">Lez.4</a> —
+  <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
+  <li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
+  <a href="go2-oggetti.html">Lez.2</a> —
+  <a href="go3-composizione.html">Lez.3</a> —
+  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li>
+<li><a href="images/sprites/invaders.png">invaders.png</a></li>
+
+  <!--li><a href="https://www.dropbox.com/s/pulc6vggbrzm6u6/presenze.csv?dl=1">Presenze (fino a mercoledì)</a></li>
+  <li><a href="https://forms.gle/6cedgGQESKkTQLJAA">Questionario sullo stage</a></li-->
 </ul>
 
         </section>
