--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h2 id="introduzione-alla-programmazione">Introduzione alla programmazione</h2>
 
 <ul>
-  <li><a href="p01-algoritmi.html">Algoritmi</a></li>
+  <li><a href="p01-basi.html">Basi</a></li>
   <li><a href="p02-cicli.html">Cicli</a></li>
   <li><a href="p03-funzioni.html">Funzioni</a></li>
   <li><a href="p04-oggetti.html">Oggetti</a></li>
