--- a/stage-logistica.html
+++ b/stage-logistica.html
@@ -48,7 +48,7 @@
 <h2>Organizzazione dello stage estivo</h2>
 
 <p>
-Lo stage “<a href="index.html#stage-estivo">Creare un videogioco in Python o Go</a>” organizzato dal Dipartimento di Ingegneria e Architettura avrà luogo da lunedì 12 giugno 2023 a venerdì 16 giugno 2023 dalle ore 09:00 alle 13:00 nel <a href="https://dia.unipr.it/it/plesso-aule-delle-scienze">Plesso Q02</a>, al Campus dell'Area delle Scienze di Parma. Negli stessi giorni sarà inoltre possibile partecipare ad esercitazioni pomeridiane assistite, dalle ore 14:00 alle 17:00. Agli studenti senza precedente esperienza di programmazione, è suggerita caldamente la partecipazione alle attività pomeridiane, che saranno dedicate alla soluzione guidata di alcuni degli esercizi proposti.
+Lo stage “<a href="index.html#stage-estivo">Creare un videogioco in Python</a>” organizzato dal Dipartimento di Ingegneria e Architettura avrà luogo da lunedì 10 giugno 2024 a venerdì 14 giugno 2024 dalle ore 09:00 alle 13:00 e dalle ore 14:00 alle ore 16:00 nel <a href="https://dia.unipr.it/it/plesso-aule-delle-scienze">Plesso Q02</a>, al Campus dell'Area delle Scienze di Parma.
 </p>
 <!--p>
 L'indirizzo <i>postale</i> della sede è: Viale delle Scienze, 69/A - Campus Universitario - 43124 Parma. E' qui riportata anche un'immagine dell'ingresso della Sede Didattica di Ingegneria, a circa 20 metri dalla fermata dell'autobus. Il collegamento che segue porta ad una immagine Google Maps dell'area centrale del Campus, con al centro la sede didattica di Ingegneria: <a href="https://goo.gl/maps/jzojNA14fQQ2">mappa</a>
@@ -77,7 +77,7 @@ A fianco della sede di Ingegneria, a circa 100 metri, è presente una mensa stud
 </p>
 
 <p>
-Per chi avesse bisogno di un alloggio, si possono trovare in città dei bed&breakfast piuttosto economici, prenotabili dal seguente sito: <a href="https://www.bed-and-breakfast.it/lista_strutture_ur.cfm?locale=it&citta=parma&checkin=11/06/2023&checkout=16/06/2023&NumberRooms=2&NumberPeople=5&q=Parma&prezzo=1">bed-and-breakfast.it</a>.
+Per chi avesse bisogno di un alloggio, si possono trovare in città dei bed&breakfast piuttosto economici, prenotabili dal seguente sito: <a href="https://www.bed-and-breakfast.it/lista_strutture_ur.cfm?locale=it&citta=parma&checkin=09/06/2024&checkout=14/06/2024&NumberRooms=2&NumberPeople=5&q=Parma&prezzo=1">bed-and-breakfast.it</a>.
 </p>
 
 <p>
