--- a/pyodide/index.html
+++ b/pyodide/index.html
@@ -408,7 +408,7 @@
                   })
                 );
               }
-              if (pyodide.isPyProxy(value)) {
+              if (pyodide.isPyProxy && pyodide.isPyProxy(value)) {
                 value.destroy();
               }
             } catch (e) {
