--- a/index.html
+++ b/index.html
@@ -60,17 +60,11 @@
 <h2 id="introduzione-alla-programmazione">Introduzione alla programmazione</h2>
 
 <ul>
-  <li><a href="p01-basi.html">Basi</a></li>
-  <li><a href="p02-cicli.html">Cicli</a></li>
-  <li><a href="p03-funzioni.html">Funzioni</a></li>
-  <li><a href="p04-oggetti.html">Oggetti</a></li>
-  <li><a href="p05-relazioni.html">Relazioni</a></li>
-  <li><a href="p06-collaudo.html">Collaudo</a></li>
-  <li><a href="p07-sequenze.html">Sequenze</a></li>
-  <li><a href="p08-ricorsione.html">Ricorsione</a></li>
-  <li><a href="p09-matrici.html">Matrici</a></li>
-  <li><a href="p10-collezioni.html">Collezioni</a></li>
-  <li><a href="p11-backtrack.html">Backtracking</a></li>
+  <li><a href="p11-probsolv.html">Problem solving</a> - <a href="p12-basi.html">Basi</a> - <a href="p13-cicli.html">Cicli</a></li>
+  <li><a href="p21-funzioni.html">Funzioni</a></li>
+  <li><a href="p31-oggetti.html">Oggetti</a> - <a href="p32-relazioni.html">Relazioni</a> - <a href="p33-sviluppo.html">Sviluppo</a> - <a href="p34-collaudo.html">Collaudo</a></li>
+  <li><a href="p41-sequenze.html">Sequenze</a> - <a href="p42-matrici.html">Matrici</a></li>
+  <li><a href="p51-ricorsione.html">Ricorsione</a> - <a href="p52-backtrack.html">Backtracking</a> - <a href="p53-minimax.html">Minimax</a></li>
   <li><a href="https://www.dropbox.com/s/h9ffglpx53275z2/programmazione-2x2.pdf?dl=1">Slide in PDF (2x2, non aggiornate)</a></li>
 </ul>
 
@@ -79,11 +73,11 @@
 <h2 id="introduzione-allinformatica">Introduzione all’informatica</h2>
 
 <ul>
-  <li><a href="t01-logica.html">Logica</a></li>
-  <li><a href="t02-codifica.html">Codifica</a></li>
-  <li><a href="t03-linguaggi.html">Linguaggi</a></li>
-  <li><a href="t04-calcolatori.html">Calcolatori</a></li>
-  <li><a href="t05-complessita.html">Complessità</a></li>
+  <li><a href="t11-logica.html">Logica</a></li>
+  <li><a href="t21-codifica.html">Codifica</a> - <a href="t22-multimedia.html">Multimedia</a></li>
+  <li><a href="t31-calcolatori.html">Calcolatori</a></li>
+  <li><a href="t41-regex.html">Regex</a> - <a href="t42-grammatiche.html">Grammatiche</a> - <a href="t43-automi.html">Automi</a></li>
+  <li><a href="t51-complessita.html">Complessità</a></li>
   <li><a href="https://www.dropbox.com/s/qlyzeet068hjw05/informatica-2x2.pdf?dl=1">Slide in PDF (2x2, non aggiornate)</a></li>
 </ul>
 
