--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <ul>
   <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
   <li><a href="stage.html">Presentazione dello stage</a></li>
-  <li><a href="https://www.dropbox.com/s/f2n8ukok23k268r/stage-iscrizione.docx?dl=1">Modulo richiesta di iscrizione</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
   <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
