--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
   <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
   <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EQFLgiNc9N1EoXFvVuhKhpQBdX_KWD12XnvnEU_LpIPWrw?e=7FWuTq">Ragazze digitali 2024</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
   <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
   <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
