--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
   <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EQFLgiNc9N1EoXFvVuhKhpQBdX_KWD12XnvnEU_LpIPWrw?e=7FWuTq">Ragazze digitali 2024</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
   <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
-  <li>Python: <a href="p01-algoritmi.html">Lez.1</a> —
-  <a href="p03-funzioni.html">Lez.2</a> —
-  <a href="p04-oggetti.html">Lez.3</a> —
-  <a href="p05-relazioni.html">Lez.4</a> —
+  <li>Python: <a href="p12-basi.html">Lez.1</a> —
+  <a href="p21-funzioni.html">Lez.2</a> —
+  <a href="p31-oggetti.html">Lez.3</a> —
+  <a href="p32-relazioni.html">Lez.4</a> —
   <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
   <li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
   <a href="go2-oggetti.html">Lez.2</a> —
