--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
   <a href="p31-oggetti.html">Lez.3</a> —
   <a href="p32-relazioni.html">Lez.4</a> —
   <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
-  <li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
+  <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
   <a href="go2-oggetti.html">Lez.2</a> —
   <a href="go3-composizione.html">Lez.3</a> —
-  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li>
+  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li-->
 <li><a href="images/sprites/invaders.png">invaders.png</a></li>
 
 <hr />
