--- a/fondinfo/index.html
+++ b/fondinfo/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "https://tomamic.github.io/";</script>
+<script>window.location.href = "https://fondinfo.github.io/";</script>
