--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <a href="p21-funzioni.html">Lez.2</a> —
   <a href="p31-oggetti.html">Lez.3</a> —
   <a href="p32-relazioni.html">Lez.4</a> —
-  <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
+  <a href="https://fondinfo.github.io/play/">Playground</a></li>
   <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
   <a href="go2-oggetti.html">Lez.2</a> —
   <a href="go3-composizione.html">Lez.3</a> —
@@ -79,7 +79,7 @@
   <li><a href="https://github.com/tomamic/fondinfo/wiki/"><b>Dispense del corso</b></a></li>
   <li><a href="intro.html">Presentazione del corso</a></li>
   <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
-  <li><a href="intro.html#/8">Libri e software</a> - <a href="https://tomamic.github.io/pyodide/">Playground</a></li>
+  <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">Playground</a></li>
   <li><a href="https://elly2023.dia.unipr.it/mod/forum/view.php?id=3099">Annunci</a></li>
 </ul>
 
