--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
   <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EQFLgiNc9N1EoXFvVuhKhpQBdX_KWD12XnvnEU_LpIPWrw?e=7FWuTq">Ragazze digitali 2024</a></li>
   <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
   <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
-  <li>Python: <a href="p12-basi.html">Lez.1</a> —
+  <li>Python:
+  <a href="p11-probsolv.html">Lez.0</a> —
+  <a href="p12-basi.html">Lez.1</a> —
   <a href="p21-funzioni.html">Lez.2</a> —
   <a href="p31-oggetti.html">Lez.3</a> —
   <a href="p32-relazioni.html">Lez.4</a> —
-  <a href="https://fondinfo.github.io/play/">Playground</a></li>
+  <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
   <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
   <a href="go2-oggetti.html">Lez.2</a> —
   <a href="go3-composizione.html">Lez.3</a> —
@@ -79,7 +81,7 @@
   <li><a href="https://github.com/tomamic/fondinfo/wiki/"><b>Dispense del corso</b></a></li>
   <li><a href="intro.html">Presentazione del corso</a></li>
   <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
-  <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">Playground</a></li>
+  <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
   <li><a href="https://elly2023.dia.unipr.it/mod/forum/view.php?id=3099">Annunci</a></li>
 </ul>
 
