--- a/index.html
+++ b/index.html
@@ -45,42 +45,9 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<h2 id="stage-estivo">Stage estivo</h2>
-
-<p><strong>Creare un videogioco in Python</strong></p>
-
-<p>Stage formativo per studenti delle scuole superiori, 10-14 giugno 2024</p>
-
-<ul>
-  <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
-  <li><a href="stage.html">Presentazione dello stage</a></li>
-  <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
-  <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
-  <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
-  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EQFLgiNc9N1EoXFvVuhKhpQBdX_KWD12XnvnEU_LpIPWrw?e=7FWuTq">Ragazze digitali 2024</a></li>
-  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
-  <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
-  <li>Python:
-  <a href="p11-probsolv.html">Lez.0</a> —
-  <a href="p12-basi.html">Lez.1</a> —
-  <a href="p21-funzioni.html">Lez.2</a> —
-  <a href="p31-oggetti.html">Lez.3</a> —
-  <a href="p32-relazioni.html">Lez.4</a> —
-  <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
-  <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
-  <a href="go2-oggetti.html">Lez.2</a> —
-  <a href="go3-composizione.html">Lez.3</a> —
-  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li-->
-<li><a href="images/sprites/invaders.png">invaders.png</a> —
-<a href="images/sprites/frogger.png">frogger.png</a> —
-<a href="images/sprites/frogger-bg.png">frogger-bg.png</a></li>
-
-<hr />
-
 <h2 id="insegnamento-per-ingegneria-delle-tecnologie-informatiche">Insegnamento per Ingegneria delle Tecnologie Informatiche</h2>
 
 <ul>
-  <li><a href="https://github.com/tomamic/fondinfo/wiki/"><b>Dispense del corso</b></a></li>
   <li><a href="intro.html">Presentazione del corso</a></li>
   <li><a href="intro.html#/4">Esercitazioni ed esame</a> - <a href="progetti.html">Progetti</a></li>
   <li><a href="intro.html#/8">Libri e software</a> - <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
@@ -92,12 +59,19 @@
 <h2 id="introduzione-alla-programmazione">Introduzione alla programmazione</h2>
 
 <ul>
-  <li><a href="p11-probsolv.html">Problem solving</a> - <a href="p12-basi.html">Basi</a> - <a href="p13-cicli.html">Cicli</a></li>
-  <li><a href="p21-funzioni.html">Funzioni</a></li>
-  <li><a href="p31-oggetti.html">Oggetti</a> - <a href="p32-relazioni.html">Relazioni</a> - <a href="p33-sviluppo.html">Sviluppo</a> - <a href="p34-collaudo.html">Collaudo</a></li>
-  <li><a href="p41-sequenze.html">Sequenze</a> - <a href="p42-matrici.html">Matrici</a></li>
-  <li><a href="p51-ricorsione.html">Ricorsione</a> - <a href="p52-backtrack.html">Backtracking</a> - <a href="p53-minimax.html">Minimax</a></li>
-  <li><a href="https://www.dropbox.com/s/h9ffglpx53275z2/programmazione-2x2.pdf?dl=1">Slide in PDF (2x2, non aggiornate)</a></li>
+  <li><a href="http://fondinfo.github.io/slides/p11-probsolv.html">Problem solving</a> -
+      <a href="http://fondinfo.github.io/slides/p12-basi.html">Basi</a> -
+      <a href="http://fondinfo.github.io/slides/p13-cicli.html">Cicli</a></li>
+  <li><a href="http://fondinfo.github.io/slides/p21-funzioni.html">Funzioni</a></li>
+  <li><a href="http://fondinfo.github.io/slides/p31-oggetti.html">Oggetti</a> -
+      <a href="http://fondinfo.github.io/slides/p32-relazioni.html">Relazioni</a> -
+      <a href="http://fondinfo.github.io/slides/p33-sviluppo.html">Sviluppo</a> -
+      <a href="http://fondinfo.github.io/slides/p34-collaudo.html">Collaudo</a></li>
+  <li><a href="http://fondinfo.github.io/slides/p41-sequenze.html">Sequenze</a> -
+      <a href="http://fondinfo.github.io/slides/p42-matrici.html">Matrici</a></li>
+  <li><a href="http://fondinfo.github.io/slides/p51-ricorsione.html">Ricorsione</a> -
+      <a href="http://fondinfo.github.io/slides/p52-backtrack.html">Backtracking</a> -
+      <a href="http://fondinfo.github.io/slides/p53-minimax.html">Minimax</a></li>
 </ul>
 
 <hr />
@@ -105,12 +79,14 @@
 <h2 id="introduzione-allinformatica">Introduzione all’informatica</h2>
 
 <ul>
-  <li><a href="t11-logica.html">Logica</a></li>
-  <li><a href="t21-codifica.html">Codifica</a> - <a href="t22-multimedia.html">Multimedia</a></li>
-  <li><a href="t31-calcolatori.html">Calcolatori</a></li>
-  <li><a href="t41-regex.html">Regex</a> - <a href="t42-grammatiche.html">Grammatiche</a> - <a href="t43-automi.html">Automi</a></li>
-  <li><a href="t51-complessita.html">Complessità</a></li>
-  <li><a href="https://www.dropbox.com/s/qlyzeet068hjw05/informatica-2x2.pdf?dl=1">Slide in PDF (2x2, non aggiornate)</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t11-logica.html">Logica</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t21-codifica.html">Codifica</a> -
+      <a href="http://fondinfo.github.io/slides/t22-multimedia.html">Multimedia</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t31-calcolatori.html">Calcolatori</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t41-regex.html">Regex</a> -
+      <a href="http://fondinfo.github.io/slides/t42-grammatiche.html">Grammatiche</a> -
+      <a href="http://fondinfo.github.io/slides/t43-automi.html">Automi</a></li>
+  <li><a href="http://fondinfo.github.io/slides/t51-complessita.html">Complessità</a></li>
 </ul>
 
 <hr />
@@ -159,6 +135,38 @@
   <a href="x07-android.html">Kivy e Android</a></li>
   <li><a href="https://github.com/tomamic/fondinfo/wiki/Link-utili">Link utili</a></li>
 </ul>
+
+<hr />
+
+<h2 id="stage-estivo">Stage estivo</h2>
+
+<p><strong>Creare un videogioco in Python</strong></p>
+
+<p>Stage formativo per studenti delle scuole superiori, 10-14 giugno 2024</p>
+
+<ul>
+  <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
+  <li><a href="stage.html">Presentazione dello stage</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:w:/g/personal/michele_tomaiuolo_unipr_it/EQSX6XPE1_1LiPxHI1lkQXcBqw1BRHQxjsi7axH9RtH95g?e=bUVdgG">Modulo richiesta di iscrizione</a></li>
+  <li><a href="stage-logistica.html">Organizzazione dello stage</a></li>
+  <li><a href="https://www.dropbox.com/s/aqg7rr0h3wx3fam/soggiorno-minore.pdf?dl=1">Autorizzazione soggiorno minorenne</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:b:/g/personal/michele_tomaiuolo_unipr_it/EQFLgiNc9N1EoXFvVuhKhpQBdX_KWD12XnvnEU_LpIPWrw?e=7FWuTq">Ragazze digitali 2024</a></li>
+  <li><a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EVtG5DuRhntDheRZ6cMwpcUBcV_OQS5rGWwLIZefuvbiQg?e=yfzXWm">Laurea in Ingegneria delle Tecnologie Informatiche</a> —
+  <a href="https://univpr-my.sharepoint.com/:p:/g/personal/michele_tomaiuolo_unipr_it/EUHBVBrW7khJr8wSHrHLWXoBRb1nHZ9-AxULPpWPViYuBQ?e=jejQp5">Ingegneria</a></li>
+  <li>Python:
+  <a href="p11-probsolv.html">Lez.0</a> —
+  <a href="p12-basi.html">Lez.1</a> —
+  <a href="p21-funzioni.html">Lez.2</a> —
+  <a href="p31-oggetti.html">Lez.3</a> —
+  <a href="p32-relazioni.html">Lez.4</a> —
+  <a href="https://fondinfo.github.io/play/">▶️ Playground</a></li>
+  <!--li>Go: <a href="go1-algoritmi.html">Lez.1</a> —
+  <a href="go2-oggetti.html">Lez.2</a> —
+  <a href="go3-composizione.html">Lez.3</a> —
+  <a href="http://www.ce.unipr.it/gopherjs/">Playground</a></li-->
+<li><a href="images/sprites/invaders.png">invaders.png</a> —
+<a href="images/sprites/frogger.png">frogger.png</a> —
+<a href="images/sprites/frogger-bg.png">frogger-bg.png</a></li>
 
 <hr />
 
