--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 <p><strong>Creare un videogioco in Python</strong></p>
 
-<p>Stage formativo per studenti delle scuole superiori, 10-14 giugno 2024</p>
+<p>Stage formativo per studenti delle scuole superiori, 09-13 giugno 2025</p>
 
 <ul>
   <li><a href="https://www.dropbox.com/s/yqfo08rctq78i8b/stage.pdf?dl=1">Locandina in PDF</a></li>
@@ -182,7 +182,7 @@
   <li><a href="rust.html">Rust</a></li>
   <li><a href="golang.html">Go</a></li>
   <li><a href="pymeta.html">Python metaprogramming</a></li>
-  <li><a href="scipy.html">Python for data analysis</a></li>
+  <li><a href="http://fondinfo.github.io/slides/scipy.html">Python for data analysis</a></li>
   <li><a href="bigdata.html">Frameworks for Big Data</a></li>
   <li><a href="http://sowide.ce.unipr.it/teaching/linguaggi">Videos and more</a></li>
   <li><a href="https://github.com/tomamic/fondinfo/wiki/T03-Linguaggi">Linguaggi formali, dispensa in italiano</a></li>
